--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Arfacator</string>
+    <string name="copied">Copied</string>
+    <string name="search">Search</string>
+    <string name="preferences">Preferences</string>
+    <string name="about">About</string>
+    <string name="more">More</string>
+    <string name="switch_view">Switch view</string>
+    <string name="delete">Delete</string>
+    <string name="keep">Keep</string>
+    <string name="empty_list">Your list is empty!</string>
+    <string name="dialog_delete_title">Delete %1%s?</string>
+    <string name="dialog_delete_text">The account will be deleted permanently, and this process is UNRECOVERABLE!</string>
+    
     
 </resources>
